# trading-bot-framework

./: .env.example  .env.futures  .env.ibkr.live  .env.ibkr.paper  .env.live  .env.sandbox  .gitignore  BacktestWrapper.html  CLAUDE.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  PRODUCTION_ROADMAP.md  README.MD  README.md  analyze_filters.py  docker-compose.yml  environment.yml  main.py  main_async.py  pyproject.toml  requirements.txt  test_signals.py
config/: ibkr_config.py  settings.py
configs/: silver_bullet_fvg_optimization.json
data/: __init__.py  base_data_source.py  ccxt_source.py  csv_source.py  data_source.py  ibkr_connection.py  ibkr_source.py  ibkr_sync_wrapper.py  orderbook_source.py  yahoo_finance.py
data/csv/: README.md
data/state/: checkpoint.json  orders.json  (+2 more)
docs/: ALERTING.MD  BACKTEST.md  BACKTESTING_README.md  BREAKOUT_STRATEGY_DEVELOPMENT.md  CONFIGURATION.md  DATABASE_USAGE.md  DATA_DOWNLOADING.md  DATA_PREPROCESS.md  IBKR_INTEGRATION.md  IBKR_LIVE_TRADING.md  MONTE_CARLO.md  OPTIMIZATION.md  OPTIMIZATION_README.md  OPTIMIZE_QUICK_REFERENCE.md  PREPROCESSING_README.md  STRATEGY_IMPLEMENTATION.md  WALK_FORWARD.md  WALK_FORWARD_ANALYSIS.md
examples/: custom_optimization_examples.sh
execution/: paper_trader.py
monitoring/: alert_system.py
risk/: risk_manager.py
scripts/: README_preprocessing.md  download_data.py  monitor_db.py  monte_carlo.py  optimize.html  optimize.py  optimize_strategy.py  preprocess_data.py  run_backtest.py  run_monte_carlo.py  run_paper_trading.py  run_walk_forward.py  walk_forward.py
strategies/: base_strategy.py  breakout_strategy.py  mean_reversion.py  sma_position.py  test_strategy.py  trend_following.py
tests/: test_candlestick_patterns.py  test_ccxt_orders.py  test_ccxt_positions.py  test_grid_search_optimizer.py  test_ibkr_connection.py  test_ibkr_execution.py  test_ibkr_paper_integration.py  test_paper_trader.py  test_pivot_detector.py  test_strategies.py  test_volumeprofile.py
utils/: db_logger.py  env_utils.py  hybrid_state_store.py  latency_monitor.py  logger.py  metrics_server.py  postgres_state_store.py  sync_db_logger.py
(+107 files in other folders)
